updated style conf

--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -30,7 +30,7 @@
         </p>
 
     </section>
-    
+
     <section>
         <a href="speakers.html">
         <h5>Speakers</h5>
@@ -38,6 +38,21 @@
         </a>
         <p>Joining us from all around the world are over twenty fantastic speakers, here 
         to share their stories.</p>
+    </section>
+
+    <section>
+        <a href="schedule.html">
+            <h5>Schedule</h5>
+            <h3></h3>
+        </a>
+    </section>
+
+    <section>
+        <a href="venue.html">
+            <h5>Venue</h5>
+            <h3>Embassy Suites</h3>
+            <p>The Embassy Suites will provide a spacious, professionally appealing venue.</p>
+        </a>
     </section>
 
     <footer>
