--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -8,6 +8,7 @@
     
 </head>
     <body>
+    <header>
             <h1>
                 <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
                 </a>
@@ -20,15 +21,15 @@
             <a href="Schedule.html">Schedule</a>
             <a href="venue.html">Venue</a>
         </nav>
+    </header>
     <section>
-        <a href="register.html">Register</a>
         <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
 
         <p>
             Every year web designers and front-end developers join together to explore 
             and discuss the latest technologies. Be a part of the event and join us!
         </p>
-
+        <a href="register.html">Register</a>
     </section>
 
     <section>
@@ -43,16 +44,20 @@
     <section>
         <a href="schedule.html">
             <h5>Schedule</h5>
-            <h3></h3>
-        </a>
+            <h3>Style Conference Tracks</h3>
+            </a>
+            <p>Dive deep into these exciting talks, tech sessions
+                and speaker stories as they will sure to leave you inspired.
+            </p>
     </section>
 
     <section>
         <a href="venue.html">
             <h5>Venue</h5>
             <h3>Embassy Suites</h3>
-            <p>The Embassy Suites will provide a spacious, professionally appealing venue.</p>
-        </a>
+            </a>
+            <p>The Embassy Suites Conference Center will provide a spacious, 
+                professionally appealing conference venue.</p>
     </section>
 
     <footer>
