--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -61,6 +61,12 @@
     </section>
 
     <footer>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="Schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+        </nav>
         <small>&copy; Developer Style Conference</small>
     </footer>
 </body>
