style conference 2 rough draft

--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -8,7 +8,7 @@
     
 </head>
     <body>
-    <header>
+       <header class="container">
             <h1>
                 <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
                 </a>
@@ -21,18 +21,18 @@
             <a href="Schedule.html">Schedule</a>
             <a href="venue.html">Venue</a>
         </nav>
-    </header>
-    <section>
-        <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
+        </header>
+        <section class= "hero container">
+            <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
 
-        <p>
-            Every year web designers and front-end developers join together to explore 
-            and discuss the latest technologies. Be a part of the event and join us!
-        </p>
-        <a href="register.html">Register</a>
+            <p>
+                Every year web designers and front-end developers join together to explore 
+                and discuss the latest technologies. Be a part of the event and join us!
+            </p>
+            <a href="register.html">Register</a>
     </section>
 
-    <section>
+    <section class= "hero container">
         <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
@@ -41,7 +41,7 @@
         to share their stories.</p>
     </section>
 
-    <section>
+    <section class="hero container">
         <a href="schedule.html">
             <h5>Schedule</h5>
             <h3>Style Conference Tracks</h3>
@@ -51,7 +51,7 @@
             </p>
     </section>
 
-    <section>
+    <section class="hero container">
         <a href="venue.html">
             <h5>Venue</h5>
             <h3>Embassy Suites</h3>
@@ -60,7 +60,7 @@
                 professionally appealing conference venue.</p>
     </section>
 
-    <footer>
+    <footer class="container">
         <nav>
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
