--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -7,6 +7,7 @@
     <title>Register</title> 
 </head>
 <body>
+    <header class:"container">
     <h1>
         <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
         </a>
@@ -19,7 +20,8 @@
         <a href="Schedule.html">Schedule</a>
         <a href="venue.html">Venue</a>
     </nav>
-    <footer>
+</header>
+    <footer class:"container">
         <small>&copy; Developer Style Conference</small>
     </footer>
 </body>
