Second Style Conference updload for may 17

--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Conference</title>
-    
 </head>
     <body>
        <header class="container">
@@ -21,6 +20,7 @@
             <a href="Schedule.html">Schedule</a>
             <a href="venue.html">Venue</a>
         </nav>
+        <a class="btn btn-alt"></a>
         </header>
         <section class= "hero container">
             <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
@@ -47,7 +47,7 @@
             <h3>Style Conference Tracks</h3>
             </a>
             <p>Dive deep into these exciting talks, tech sessions
-                and speaker stories as they will sure to leave you inspired.
+                and speaker stories as they will be sure to leave you inspired.
             </p>
     </section>
 
