--- a/style-conference/schedule.html
+++ b/style-conference/schedule.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule</title>
+</head>
+<body>
+    <header class="container">
     <h1>
         <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
         </a>
@@ -17,8 +20,8 @@
         <a href="Schedule.html">Schedule</a>
         <a href="venue.html">Venue</a>
     </nav>
-</head>
-<body>
+    </header>
+
     
 </body>
 <footer>
