--- a/style-conference/speakers.html
+++ b/style-conference/speakers.html
@@ -5,25 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speakers</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <header class="container">
-    <h1>
-        <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
-        </a>
-    </h1>
+        <h1>
+            <a href="index.html"><img src="assets/logo-1.png" alt="logo">
+            </a>
+        </h1>
 
-    <h3>August 24th - August 26th Omaha, NE</h3>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="Schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-    </nav>
+        <h3>August 24th - August 26th Omaha, NE</h3>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="Schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
     </header>
 
-    <footer class="container"></footer>
+    <footer class="container">
         <small>&copy; Developer Style Conference</small>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="Schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
     </footer>
 </body>
 
