--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -5,69 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Conference</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
-    <body>
-       <header class="container">
-            <h1>
-                <a href="index.hmtl"><img src="assets/logo-1.png" alt="logo">
-                </a>
-            </h1>
+<body>
+    <header class="container">
+        <h1>
+            <a href="index.html"><img src="assets/logo-1.png" alt="logo">
+            </a>
+        </h1>
 
-            <h3>August 24th - August 26th Omaha, NE</h3>
+        <h3>August 24th - August 26th Omaha, NE</h3>
         <nav>
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="Schedule.html">Schedule</a>
             <a href="venue.html">Venue</a>
-        </nav>
-        <a class="btn btn-alt"></a>
-        </header>
-        <section class= "hero container">
-            <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
-
-            <p>
-                Every year web designers and front-end developers join together to explore 
-                and discuss the latest technologies. Be a part of the event and join us!
-            </p>
             <a href="register.html">Register</a>
-    </section>
-
+        </nav>
+        
+    </header>
     <section class= "hero container">
-        <a href="speakers.html">
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-        </a>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here 
-        to share their stories.</p>
-    </section>
+        <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
 
-    <section class="hero container">
-        <a href="schedule.html">
-            <h5>Schedule</h5>
-            <h3>Style Conference Tracks</h3>
+        <p>
+            Every year web designers and front-end developers join together to explore 
+            and discuss the latest technologies. Be a part of the event and join us!
+        </p>
+
+        <a class="btn btn-alt" href="register.html">Register</a>
+    </section>
+    <section class="container">
+
+        <section>
+            <a href="speakers.html">
+                <h5>Speakers</h5>
+                <h3>World-Class Speakers</h3>
+            </a>
+            <p>Joining us from all around the world are over twenty fantastic speakers, here 
+                to share their stories.</p>
+        </section>
+
+        <section>
+            <a href="schedule.html">
+                <h5>Schedule</h5>
+                <h3>Style Conference Tracks</h3>
             </a>
             <p>Dive deep into these exciting talks, tech sessions
-                and speaker stories as they will be sure to leave you inspired.
+            and speaker stories as they will be sure to leave you inspired.
             </p>
-    </section>
+        </section>
 
-    <section class="hero container">
-        <a href="venue.html">
-            <h5>Venue</h5>
-            <h3>Embassy Suites</h3>
+        <section>
+            <a href="venue.html">
+                <h5>Venue</h5>
+                <h3>Embassy Suites</h3>
             </a>
             <p>The Embassy Suites Conference Center will provide a spacious, 
                 professionally appealing conference venue.</p>
+        </section>
     </section>
-
     <footer class="container">
+        <small>&copy; Developer Style Conference</small>
         <nav>
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="Schedule.html">Schedule</a>
             <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
         </nav>
-        <small>&copy; Developer Style Conference</small>
     </footer>
 </body>
 </html>
