--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header class="container">
-        <h1>
+    <header class="container group">
+        <h1 class="logo">
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
         </h1>
@@ -35,9 +35,9 @@
 
         <a class="btn btn-alt" href="register.html">Register</a>
     </section>
-    <section class="container">
+    <section class="grid">
 
-        <section>
+        <section class="col-1-3">
             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World-Class Speakers</h3>
@@ -46,7 +46,7 @@
                 to share their stories.</p>
         </section>
 
-        <section>
+        <section class="col-1-3">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Style Conference Tracks</h3>
@@ -56,7 +56,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="col-1-3">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>Embassy Suites</h3>
@@ -65,7 +65,7 @@
                 professionally appealing conference venue.</p>
         </section>
     </section>
-    <footer class="container">
+    <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
         <nav>
             <a href="index.html">Home</a>
