--- a/style-conference/venue.html
+++ b/style-conference/venue.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header class="container">
+    <header class="container group">
         <h1>
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
@@ -25,7 +25,7 @@
         </nav>
         
     </header>
-    <footer class="container">
+    <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
         <nav>
             <a href="index.html">Home</a>
