--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -15,8 +15,8 @@
             </a>
         </h1>
 
-        <h3>August 24th - August 26th Omaha, NE</h3>
-        <nav>
+        <h3 class= "tagline">August 24th - August 26th Omaha, NE</h3>
+        <nav class= "primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="Schedule.html">Schedule</a>
@@ -37,7 +37,7 @@
     </section>
     <section class="grid">
 
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World-Class Speakers</h3>
