--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -46,7 +46,7 @@
                 to share their stories.</p>
         </section>
 
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Style Conference Tracks</h3>
@@ -56,7 +56,7 @@
             </p>
         </section>
 
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>Embassy Suites</h3>
