--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header class="container group">
+    <header class="primary-header container group">
         <h1 class="logo">
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
@@ -32,10 +32,15 @@
             Every year web designers and front-end developers join together to explore 
             and discuss the latest technologies. Be a part of the event and join us!
         </p>
+    <section class="row-alt">
+        <div class="container">
 
         <a class="btn btn-alt" href="register.html">Register</a>
+
+        </div>
     </section>
-    <section class="grid">
+    <section class="row">
+        <div class= "grid"
 
         <section class="teaser col-1-3">
             <a href="speakers.html">
@@ -64,6 +69,7 @@
             <p>The Embassy Suites Conference Center will provide a spacious, 
                 professionally appealing conference venue.</p>
         </section>
+    </div>
     </section>
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
