--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -16,12 +16,14 @@
         </h1>
 
         <h3 class= "tagline">August 24th - August 26th Omaha, NE</h3>
-        <nav class= "primary-nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="Schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class= "nav primary-nav">
+            <ul>
+            <li>><a href="index.html">Home</a></li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="Schedule.html">Schedule</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
         
     </header>
@@ -32,53 +34,54 @@
             Every year web designers and front-end developers join together to explore 
             and discuss the latest technologies. Be a part of the event and join us!
         </p>
-    <section class="row-alt">
-        <div class="container">
+
 
         <a class="btn btn-alt" href="register.html">Register</a>
 
-        </div>
+        
     </section>
     <section class="row">
-        <div class= "grid"
+        <div class= "grid">
 
-        <section class="teaser col-1-3">
-            <a href="speakers.html">
-                <h5>Speakers</h5>
-                <h3>World-Class Speakers</h3>
-            </a>
-            <p>Joining us from all around the world are over twenty fantastic speakers, here 
+            <section class="teaser col-1-3">
+                <a href="speakers.html">
+                    <h5>Speakers</h5>
+                    <h3>World-Class Speakers</h3>
+                </a>
+                <p>Joining us from all around the world are over twenty fantastic speakers, here 
                 to share their stories.</p>
-        </section>
+            </section>
 
-        <section class="teaser col-1-3">
-            <a href="schedule.html">
-                <h5>Schedule</h5>
-                <h3>Style Conference Tracks</h3>
-            </a>
-            <p>Dive deep into these exciting talks, tech sessions
-            and speaker stories as they will be sure to leave you inspired.
-            </p>
-        </section>
+            <section class="teaser col-1-3">
+                <a href="schedule.html">
+                    <h5>Schedule</h5>
+                    <h3>Style Conference Tracks</h3>
+                </a>
+                <p>Dive deep into these exciting talks, tech sessions
+                and speaker stories as they will be sure to leave you inspired.
+                </p>
+            </section>
 
-        <section class="teaser col-1-3">
-            <a href="venue.html">
-                <h5>Venue</h5>
-                <h3>Embassy Suites</h3>
-            </a>
-            <p>The Embassy Suites Conference Center will provide a spacious, 
+            <section class="teaser col-1-3">
+                <a href="venue.html">
+                    <h5>Venue</h5>
+                    <h3>Embassy Suites</h3>
+                </a>
+                <p>The Embassy Suites Conference Center will provide a spacious, 
                 professionally appealing conference venue.</p>
-        </section>
-    </div>
+            </section>
+        </div>
     </section>
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="Schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class= "nav primary-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="Schedule.html">Schedule</a></li>
+                <li><a href="venue.html">Venue</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
