--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -9,29 +9,41 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header class="container group">
+    <header class="primary-header container group">
         <h1>
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
         </h1>
 
         <h3>August 24th - August 26th Omaha, NE</h3>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="Schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class= "nav primary-nav">
+            <ul>
+                <li>><a href="index.html">Home</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="Schedule.html">Schedule</a></li>
+                <li><a href="venue.html">Venue</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
     </header>
+
+    <section class= "row-alt">
+        <div class= "lead container">
+            <h1></h1>
+            <p></p>
+        </div>
+    </section>
+
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="Schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <nav class= "nav primary-nav">
+            <ul>
+                <li>><a href="index.html">Home</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="Schedule.html">Schedule</a></li>
+                <li><a href="venue.html">Venue</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
