style con speakers commented pics

--- a/style-conference/speakers.html
+++ b/style-conference/speakers.html
@@ -72,7 +72,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/joshua-burden.png" alt="joshua-burden">
+                        <!-- <img src="speakers/joshua-burden.png" alt="joshua-burden"> -->
                         <ul>
                             <li><a href="https://twitter.com">@joshua-burden</a></li>
                         </ul>
@@ -101,7 +101,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/david-tarvin.jpeg" alt="david-tarvin">
+                        <!-- <img src="speakers/david-tarvin.jpeg" alt="david-tarvin"> -->
                         <ul>
                             <li><a href="https://twitter.com">@david-tarvin</a></li>
                         </ul>
@@ -128,7 +128,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/issac-piper.jpeg" alt="isaac-piper">
+                        <!-- <img src="speakers/issac-piper.jpeg" alt="isaac-piper"> -->
                         <ul>
                             <li><a href="https://twitter.com">@isaac-piper</a></li>
                         </ul>
@@ -153,7 +153,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/jennifer-jones.jpg" alt="jennifer-jones">
+                        <!-- <img src="speakers/jennifer-jones.jpg" alt="jennifer-jones"> -->
                         <ul>
                             <li><a href="https://twitter.com">@jennifer-jones</a></li>
                         </ul>
@@ -189,7 +189,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/shane-barsell.jpg" alt="shane-barsell">
+                        <!-- <img src="speakers/shane-barsell.jpg" alt="shane-barsell"> -->
                         <ul>
                             <li><a href="https://twitter.com">@shane-barsell</a></li>
                         </ul>
@@ -219,7 +219,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/jon-larsen.jpeg" alt="jon-larsen">
+                        <!-- <img src="speakers/jon-larsen.jpeg" alt="jon-larsen"> -->
                         <ul>
                             <li><a href="https://twitter.com">@jon-larsen</a></li>
                         </ul>
@@ -247,7 +247,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/zach-zuka.jpeg" alt="zachary-zuka">
+                        <!-- <img src="speakers/zach-zuka.jpeg" alt="zachary-zuka"> -->
                         <ul>
                             <li><a href="https://twitter.com">@zachary-zuka</a></li>
                         </ul>
@@ -280,7 +280,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/nate-decker.jpg" alt="nate-decker">
+                        <!-- <img src="speakers/nate-decker.jpg" alt="nate-decker"> -->
                         <ul>
                             <li><a href="https://twitter.com">@nate-decker</a></li>
                         </ul>
@@ -316,7 +316,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/erin-lesiter.png" alt="erin-lasiter">
+                        <!-- <img src="speakers/erin-lesiter.png" alt="erin-lasiter"> -->
                         <ul>
                             <li><a href="https://twitter.com">@erin-lasiter</a></li>
                         </ul>
@@ -352,7 +352,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/melissa-albert.jpeg" alt="melissa-albert">
+                        <!-- <img src="speakers/melissa-albert.jpeg" alt="melissa-albert"> -->
                         <ul>
                             <li><a href="https://twitter.com">@melissa-albert</a></li>
                         </ul>
@@ -388,7 +388,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/damien-alexander.jpeg" alt="damian-alexander">
+                        <!-- <img src="speakers/damien-alexander.jpeg" alt="damian-alexander"> -->
                         <ul>
                             <li><a href="https://twitter.com">@damian-alexander</a></li>
                         </ul>
@@ -422,7 +422,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/staci-beed.jpeg" alt="staci-beed">
+                        <!-- <img src="speakers/staci-beed.jpeg" alt="staci-beed"> -->
                         <ul>
                             <li><a href="https://twitter.com">@staci-beed</a></li>
                         </ul>
@@ -458,7 +458,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/jacob-furengit.jpeg" alt="jacob-furengit">
+                        <!-- <img src="speakers/jacob-furengit.jpeg" alt="jacob-furengit"> -->
                         <ul>
                             <li><a href="https://twitter.com">@jacob-furengit</a></li>
                         </ul>
@@ -486,7 +486,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/luis-anton.jpeg" alt="luis-anton">
+                        <!-- <img src="speakers/luis-anton.jpeg" alt="luis-anton"> -->
                         <ul>
                             <li><a href="https://twitter.com">@luis-anton</a></li>
                         </ul>
@@ -514,7 +514,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/chenzo-lu.jpeg" alt="chenzo-lu">
+                        <!-- <img src="speakers/chenzo-lu.jpeg" alt="chenzo-lu"> -->
                         <ul>
                             <li><a href="https://twitter.com">@chenzo-lu</a></li>
                         </ul>
@@ -542,7 +542,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/molly-reagan.jpeg" alt="molly-reagan">
+                        <!-- <img src="speakers/molly-reagan.jpeg" alt="molly-reagan"> -->
                         <ul>
                             <li><a href="https://twitter.com">@molly-reagan</a></li>
                         </ul>
@@ -570,7 +570,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/bill-salazar.jpeg" alt="bill-salazar">
+                        <!-- <img src="speakers/bill-salazar.jpeg" alt="bill-salazar"> -->
                         <ul>
                             <li><a href="https://twitter.com">@bill-salazar</a></li>
                         </ul>
@@ -598,7 +598,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/jordan.jpeg" alt="jordan-ruenberg">
+                        <!-- <img src="speakers/jordan.jpeg" alt="jordan-ruenberg"> -->
                         <ul>
                             <li><a href="https://twitter.com">@jordan-ruenberg</a></li>
                         </ul>
@@ -623,7 +623,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/heather-mason.jpeg" alt="heather-mason">
+                        <!-- <img src="speakers/heather-mason.jpeg" alt="heather-mason"> -->
                         <ul>
                             <li><a href="https://twitter.com">@heather-mason</a></li>
                         </ul>
@@ -661,7 +661,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/keri-janson.jpeg" alt="keri-janson">
+                        <!-- <img src="speakers/keri-janson.jpeg" alt="keri-janson"> -->
                         <ul>
                             <li><a href="https://twitter.com">@keri-janson</a></li>
                         </ul>
@@ -694,7 +694,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/dr-jack-michel.jpeg" alt="dr-jack-michel">
+                        <!-- <img src="speakers/dr-jack-michel.jpeg" alt="dr-jack-michel"> -->
                         <ul>
                             <li><a href="https://twitter.com">@dr-jack-michel</a></li>
                         </ul>
@@ -725,7 +725,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/tommy-sexton.jpeg" alt="tommy-sexton">
+                        <!-- <img src="speakers/tommy-sexton.jpeg" alt="tommy-sexton"> -->
                         <ul>
                             <li><a href="https://twitter.com">@tommy-sexton</a></li>
                         </ul>
@@ -763,7 +763,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/kyle-smith.jpeg" alt="kyle-smith">
+                        <!-- <img src="speakers/kyle-smith.jpeg" alt="kyle-smith"> -->
                         <ul>
                             <li><a href="https://twitter.com">@kyle-smith</a></li>
                         </ul>
