Part 7 rough draft

--- a/style-conference/speakers.html
+++ b/style-conference/speakers.html
@@ -50,7 +50,7 @@
                 </div><!--
                 --><aside class="col-1-3">
                     <div class="speaker-info">
-                        <img src="speakers/headshot.jpg" alt="headshot">
+                        <!-- <img src="speakers/headshot.jpg" alt="headshot"> -->
                         <ul>
                             <li><a href="https://twitter.com">Vanessa Kasun Twitter</a></li>
                         </ul>
