--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -18,17 +18,17 @@
         <h3 class="tagline">August 24&ndash; 26th&mdash;La Vista, NE</h3>
         <nav class= "nav primary-nav">
             <ul>
-                <li>><a href="index.html">Home</a></li> <!-- delete extra angle bracket -->
-                <li><a href="speakers.html">Speakers</a></li> <!-- also need comment separators for nav menu -->
-                <li><a href="Schedule.html">Schedule</a></li>
-                <li><a href="venue.html">Venue</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="index.html">Home</a></li> <!-- 
+                --><li><a href="speakers.html">Speakers</a></li> <!--
+                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                --><li><a href="venue.html">Venue</a></li><!--
+                --><li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </header>
     <section class= "row">
         <div class= "grid">
-            <section class= "col-2-3"> <!-- get rid of space between equal sign & quotes -->
+            <section class="col-2-3"> <!-- get rid of space between equal sign & quotes -->
                 <h2>Purchase a Conference Pass</h2>
                 <h5>$99 per Pass</h5>
                 <p>Purchase your Styles Conference pass using the form to the right. Multiple passes may be purchased within the same order, so feel free to bring a friend or two along. Once your order is finished we'll follow up and provide a receipt for your purchase. See you soon!</p>
@@ -40,8 +40,8 @@
                     <li>Gain experience and vital information on the latest software, techniques, and best practices.</li>
                 </ul>
 
-            </section> <!-- need comment tags on closing section tag and beginning form tag -->
-            <form class= "col-1-3" action:'#' method:"post"> <!-- get rid of space between equal sign and quotes, also action and method should have equal signs, not colons -->
+            </section> <!-- 
+             --><form class="col-1-3" action='#' method="post"> <!-- get rid of space between equal sign and quotes, also action and method should have equal signs, not colons -->
                 <fieldset class="register-group">
                     <label>
                         Name
@@ -55,10 +55,10 @@
                         Number of Passes
                          <select name="quantity" required>
                             <option value="1" selected>1</option>
-                            <option value="2" selected>2</option> <!-- remove selected from 2 through 5 -->
-                            <option value="3" selected>3</option>
-                            <option value="4" selected>4</option>
-                            <option value="5" selected>5</option>
+                            <option value="2">2</option> <!-- remove selected from 2 through 5 -->
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                          </select>
                     </label>
 
@@ -68,7 +68,6 @@
                     </label>
 
                 </fieldset>
-                <input type="submit" name="submit" value="Purchase"> <!-- delete this line -->
                 <input class= "btn btn-default" type="submit" name="submit" value="Purchase">
             </form>
 
@@ -87,11 +86,11 @@
         <small>&copy; Developer Style Conference</small>
         <nav class= "nav primary-nav">
             <ul>
-                <li>><a href="index.html">Home</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="Schedule.html">Schedule</a></li>
-                <li><a href="venue.html">Venue</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="index.html">Home</a></li> <!-- 
+                --><li><a href="speakers.html">Speakers</a></li> <!--
+                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                --><li><a href="venue.html">Venue</a></li><!--
+                --><li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </footer>
