--- a/style-conference/speakers.html
+++ b/style-conference/speakers.html
@@ -18,11 +18,11 @@
         <h3>August 24th - August 26th Omaha, NE</h3>
         <nav class= "nav primary-nav">
             <ul>
-                <li>><a href="index.html">Home</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="Schedule.html">Schedule</a></li>
-                <li><a href="venue.html">Venue</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="index.html">Home</a></li> <!-- 
+                --><li><a href="speakers.html">Speakers</a></li> <!--
+                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                --><li><a href="venue.html">Venue</a></li><!--
+                --><li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </header>
@@ -795,11 +795,11 @@
         <small>&copy; Developer Style Conference</small>
         <nav class= "nav primary-nav">
             <ul>
-                <li>><a href="index.html">Home</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="Schedule.html">Schedule</a></li>
-                <li><a href="venue.html">Venue</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="index.html">Home</a></li> <!-- 
+                --><li><a href="speakers.html">Speakers</a></li> <!--
+                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                --><li><a href="venue.html">Venue</a></li><!--
+                --><li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </footer>
