part 7 edits comompleted

--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -28,7 +28,7 @@
     </header>
     <section class= "row">
         <div class= "grid">
-            <section class="col-2-3"> <!-- get rid of space between equal sign & quotes -->
+            <section class="col-2-3">
                 <h2>Purchase a Conference Pass</h2>
                 <h5>$99 per Pass</h5>
                 <p>Purchase your Styles Conference pass using the form to the right. Multiple passes may be purchased within the same order, so feel free to bring a friend or two along. Once your order is finished we'll follow up and provide a receipt for your purchase. See you soon!</p>
@@ -41,7 +41,7 @@
                 </ul>
 
             </section> <!-- 
-             --><form class="col-1-3" action='#' method="post"> <!-- get rid of space between equal sign and quotes, also action and method should have equal signs, not colons -->
+             --><form class="col-1-3" action='#' method="post">
                 <fieldset class="register-group">
                     <label>
                         Name
@@ -55,7 +55,7 @@
                         Number of Passes
                          <select name="quantity" required>
                             <option value="1" selected>1</option>
-                            <option value="2">2</option> <!-- remove selected from 2 through 5 -->
+                            <option value="2">2</option> 
                             <option value="3">3</option>
                             <option value="4">4</option>
                             <option value="5">5</option>
