--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="primary-header container group">
-        <h1> <!-- Missing class="logo" -->
+        <h1 class="logo">
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
         </h1>
@@ -18,14 +18,20 @@
         <h3 class="tagline">August 24&ndash; 26th&mdash;La Vista, NE</h3>
         <nav class= "nav primary-nav">
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- 
-                --><li><a href="speakers.html">Speakers</a></li> <!--
-                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                <li><a href="index.html">Home</a></li><!-- 
+                --><li><a href="speakers.html">Speakers</a></li><!--
+                --><li><a href="Schedule.html">Schedule</a></li><!--
                 --><li><a href="venue.html">Venue</a></li><!--
                 --><li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </header>
+    <section class= "row-alt">
+        <div class= "lead container">
+            <h1></h1>
+            <p></p>
+        </div>
+    </section>
     <section class= "row">
         <div class= "grid">
             <section class="col-2-3">
@@ -40,7 +46,7 @@
                     <li>Gain experience and vital information on the latest software, techniques, and best practices.</li>
                 </ul>
 
-            </section> <!-- 
+            </section><!-- 
              --><form class="col-1-3" action='#' method="post">
                 <fieldset class="register-group">
                     <label>
@@ -75,20 +81,13 @@
     </section>
     
 
-    <section class= "row-alt">
-        <div class= "lead container">
-            <h1></h1>
-            <p></p>
-        </div>
-    </section>
-
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
         <nav class= "nav primary-nav">
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- 
-                --><li><a href="speakers.html">Speakers</a></li> <!--
-                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                <li><a href="index.html">Home</a></li><!-- 
+                --><li><a href="speakers.html">Speakers</a></li><!--
+                --><li><a href="Schedule.html">Schedule</a></li><!--
                 --><li><a href="venue.html">Venue</a></li><!--
                 --><li><a href="register.html">Register</a></li>
             </ul>
