--- a/style-conference/schedule.html
+++ b/style-conference/schedule.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="primary-header container group">
-        <h1>
+        <h1 class="logo">
             <a href="index.html"><img src="assets/logo-1.png" alt="logo">
             </a>
         </h1>
@@ -18,9 +18,9 @@
         <h3>August 24th - August 26th Omaha, NE</h3>
         <nav class= "nav primary-nav">
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- 
-                --><li><a href="speakers.html">Speakers</a></li> <!--
-                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                <li><a href="index.html">Home</a></li><!-- 
+                --><li><a href="speakers.html">Speakers</a></li><!--
+                --><li><a href="Schedule.html">Schedule</a></li><!--
                 --><li><a href="venue.html">Venue</a></li><!--
                 --><li><a href="register.html">Register</a></li>
             </ul>
@@ -38,9 +38,9 @@
         <small>&copy; Developer Style Conference</small>
         <nav class= "nav primary-nav">
             <ul>
-                <li><a href="index.html">Home</a></li> <!-- 
-                --><li><a href="speakers.html">Speakers</a></li> <!--
-                --><li><a href="Schedule.html">Schedule</a></li> <!--
+                <li><a href="index.html">Home</a></li><!-- 
+                --><li><a href="speakers.html">Speakers</a></li><!--
+                --><li><a href="Schedule.html">Schedule</a></li><!--
                 --><li><a href="venue.html">Venue</a></li><!--
                 --><li><a href="register.html">Register</a></li>
             </ul>
