--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -28,8 +28,8 @@
     </header>
     <section class= "row-alt">
         <div class= "lead container">
-            <h1></h1>
-            <p></p>
+            <h1>Register</h1>
+            <p>Each year we strive to reach and teach developers nation wide, and this year we'd love it for you to join us. Conference passes only cost $99, one of the best values you'll find.</p>
         </div>
     </section>
     <section class= "row">
