--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -44,17 +44,19 @@
         <div class= "grid">
 
             <section class="teaser col-1-3">
-                <a href="speakers.html">
                     <h5>Speakers</h5>
-                    <h3>World-Class Speakers</h3>
-                </a>
+                    <a href="speakers.html">
+                        <img src="assets/images/speaker.jpg">
+                        <h3>World-Class Speakers</h3>
+                    </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here 
                 to share their stories.</p>
             </section>
 
             <section class="teaser col-1-3">
+                <h5>Schedule</h5>
                 <a href="schedule.html">
-                    <h5>Schedule</h5>
+                    <img src="assets/images/lobby.jpg">
                     <h3>Style Conference Tracks</h3>
                 </a>
                 <p>Dive deep into these exciting talks, tech sessions
@@ -63,8 +65,9 @@
             </section>
 
             <section class="teaser col-1-3">
+                <h5>Venue</h5>
                 <a href="venue.html">
-                    <h5>Venue</h5>
+                    <img src="assets/images/venue.jpg">
                     <h3>Embassy Suites</h3>
                 </a>
                 <p>The Embassy Suites Conference Center will provide a spacious, 
