--- a/style-conference/venue.html
+++ b/style-conference/venue.html
@@ -28,6 +28,19 @@
         
     </header>
 
+    <section class="row">
+        <div class= "grid">
+            <section class="venue-theater">
+                <div class= "col-1-3">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </div>
+                <iframe class= "venue-map" "col-2-3" src= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36917.9258841923!2d-96.1022721747738!3d41.1851845274384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8793f48abfc630e1%3A0xc43bc5a820688a89!2sEmbassy%20Suites%20by%20Hilton%20Omaha%20La%20Vista%20Hotel%20%26%20Conference%20Center!5e0!3m2!1sen!2sus!4v1623109295212!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </section>
+        </div>
+    </section>
+
     <section class= "row-alt">
         <div class= "lead container">
             <h1></h1>
