style conference 2nd push

--- a/style-conference/register.html
+++ b/style-conference/register.html
@@ -7,6 +7,7 @@
     <title>Register</title> 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 <body>
     <header class="primary-header container group">
@@ -16,7 +17,7 @@
         </h1>
 
         <h3 class="tagline">August 24&ndash; 26th&mdash;La Vista, NE</h3>
-        <nav class= "nav primary-nav">
+        <nav class="nav primary-nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
@@ -26,14 +27,14 @@
             </ul>
         </nav>
     </header>
-    <section class= "row-alt">
-        <div class= "lead container">
+    <section class="row-alt">
+        <div class="lead container">
             <h1>Register</h1>
             <p>Each year we strive to reach and teach developers nation wide, and this year we'd love it for you to join us. Conference passes only cost $99, one of the best values you'll find.</p>
         </div>
     </section>
-    <section class= "row">
-        <div class= "grid">
+    <section class="row">
+        <div class="grid">
             <section class="col-2-3">
                 <h2>Purchase a Conference Pass</h2>
                 <h5>$99 per Pass</h5>
@@ -74,7 +75,7 @@
                     </label>
 
                 </fieldset>
-                <input class= "btn btn-default" type="submit" name="submit" value="Purchase">
+                <input class="btn btn-default" type="submit" name="submit" value="Purchase">
             </form>
 
         </div>
@@ -83,7 +84,7 @@
 
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav class= "nav primary-nav">
+        <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
