--- a/style-conference/speakers.html
+++ b/style-conference/speakers.html
@@ -7,6 +7,7 @@
     <title>Speakers</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 <body>
     <header class="primary-header container group">
@@ -15,8 +16,8 @@
             </a>
         </h1>
 
-        <h3>August 24th - August 26th Omaha, NE</h3>
-        <nav class= "nav primary-nav">
+        <h3 class="tagline">August 24th - August 26th Omaha, NE</h3>
+        <nav class="nav primary-nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
@@ -27,8 +28,8 @@
         </nav>
     </header>
 
-    <section class= "row-alt">
-        <div class= "lead container">
+    <section class="row-alt">
+        <div class="lead container">
             <h1>Speakers</h1>
             <p>We're happy to welcome over twenty speakers to present on the industry's latest  technologies. 
             Prepare for an inspiration extravaganza.</p>
@@ -58,7 +59,7 @@
                 </aside>
             </section>
         
-            <section class="speaker" id="vanessa-kasun"> 
+            <section class="speaker" id="joshua-burden"> 
                 <div class="col-2-3">
                     <h2>Joshua Burden</h2>
                     <h5>Core UX Principles</h5>
@@ -199,13 +200,13 @@
 
             <section class="speaker" id="jon-larsen"> 
                 <div class="col-2-3">
-                    <h2>John Larsen</h2>
+                    <h2>Jon Larsen</h2>
                     <h5> Responsive Web Design: Clever Tips and Techniques</h5>
                     <p>Lorem ipsum dolor sit amet, equidem appareat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
                         ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat. </p>    
-                    <h5>About John</h5>
-                    <p>John pro equidem assueverit.Duis aute irure dolor in reprehenderit in voluptate velit 
+                    <h5>About Jon</h5>
+                    <p>Jon pro equidem assueverit.Duis aute irure dolor in reprehenderit in voluptate velit 
                     esse cillum dolore eu fugiat nulla pariatur. 
                     Excemus interdum, nisi massa vehicula nibh, scelerisque rhoncus libero ex eu nibh. 
                     Nullam at varius urna. Sed ut sapien a nunc vehicula vestibulum. Quisque tincidunt sollicitudin egestas. 
@@ -733,7 +734,7 @@
                 </aside>
             </section>
 
-            <section class="speaker" id="kyle-smith"> 
+            <section id="kyle-smith"> 
                 <div class="col-2-3">
                     <h2>Kyle Smith</h2>
                     <h5>Heavy Metal Coding</h5>
@@ -773,27 +774,11 @@
 
 
         </div>
-    </section> 
-          <section class="speaker" id="vanessa-kasun">
-            <div class="col-2-3">
-      ...
-            </div><!--
-            --><aside class="col-1-3">
-      ...
-            </aside>
-          </section>
-          <section id="fake-name">
-            <div class="col-2-3">
-      ...
-            </div><!--
-               --><aside class="col-1-3">
-      ...
-            </aside>
-          </section>   
+    </section>
 
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav class= "nav primary-nav">
+        <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
