--- a/style-conference/index.html
+++ b/style-conference/index.html
@@ -7,6 +7,7 @@
     <title>Style Conference</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 <body>
     <header class="primary-header container group">
@@ -15,7 +16,7 @@
             </a>
         </h1>
 
-        <h3 class= "tagline">August 24th - August 26th Omaha, NE</h3>
+        <h3 class="tagline">August 24th - August 26th Omaha, NE</h3>
         <nav class= "nav primary-nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
@@ -27,7 +28,7 @@
         </nav>
         
     </header>
-    <section class= "hero container">
+    <section class="hero container">
         <h2>Dedicated, Driven & Determined to Coding the Best Websites </h2>
 
         <p>
@@ -41,7 +42,7 @@
         
     </section>
     <section class="row">
-        <div class= "grid">
+        <div class="grid">
 
             <section class="teaser col-1-3">
                     <h5>Speakers</h5>
@@ -51,9 +52,8 @@
                     </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here 
                 to share their stories.</p>
-            </section>
-
-            <section class="teaser col-1-3">
+            </section> <!--
+            --><section class="teaser col-1-3">
                 <h5>Schedule</h5>
                 <a href="schedule.html">
                     <img src="assets/images/lobby.jpg">
@@ -62,9 +62,8 @@
                 <p>Dive deep into these exciting talks, tech sessions
                 and speaker stories as they will be sure to leave you inspired.
                 </p>
-            </section>
-
-            <section class="teaser col-1-3">
+            </section><!--
+            --><section class="teaser col-1-3">
                 <h5>Venue</h5>
                 <a href="venue.html">
                     <img src="assets/images/venue.jpg">
@@ -77,7 +76,7 @@
     </section>
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav class= "nav primary-nav">
+        <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
