--- a/style-conference/venue.html
+++ b/style-conference/venue.html
@@ -7,6 +7,7 @@
     <title>Venue</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 <body>
     <header class="primary-header container group">
@@ -15,8 +16,8 @@
             </a>
         </h1>
 
-        <h3>August 24th - August 26th Omaha, NE</h3>
-        <nav class= "nav primary-nav">
+        <h3 class="tagline">August 24th - August 26th Omaha, NE</h3>
+        <nav class="nav primary-nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
@@ -27,30 +28,32 @@
         </nav>
         
     </header>
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>Venue</h1>
+            <p>The conference is held at the Embassy Suites Conference Center. Attend the conference and book a room all in one place!</p>
+        </div>
+    </section>
 
     <section class="row">
-        <div class= "grid">
+        <div class="grid">
             <section class="venue-theater">
-                <div class= "col-1-3">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </div>
-                <iframe class= "venue-map" "col-2-3" src= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36917.9258841923!2d-96.1022721747738!3d41.1851845274384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8793f48abfc630e1%3A0xc43bc5a820688a89!2sEmbassy%20Suites%20by%20Hilton%20Omaha%20La%20Vista%20Hotel%20%26%20Conference%20Center!5e0!3m2!1sen!2sus!4v1623109295212!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <div class="col-1-3">
+                    <h2>Embassy Suites</h2>
+                    <p>12520 Westport Pkwy <br>La Vista, NE 68128</p>
+                    <p><a href="https://www.hilton.com/en/hotels/omaeses-embassy-suites-omaha-la-vista-hotel-and-conference-center/">Embassy Suites by Hilton</a>
+                    Embassy Suites by Hilton<br>(402) 331-7400</p>
+                </div><!--
+
+                --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36917.9258841923!2d-96.1022721747738!3d41.1851845274384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8793f48abfc630e1%3A0xc43bc5a820688a89!2sEmbassy%20Suites%20by%20Hilton%20Omaha%20La%20Vista%20Hotel%20%26%20Conference%20Center!5e0!3m2!1sen!2sus!4v1623109295212!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </section>
         </div>
     </section>
 
-    <section class= "row-alt">
-        <div class= "lead container">
-            <h1></h1>
-            <p></p>
-        </div>
-    </section>
 
     <footer class="primary-footer container group">
         <small>&copy; Developer Style Conference</small>
-        <nav class= "nav primary-nav">
+        <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li><!-- 
                 --><li><a href="speakers.html">Speakers</a></li><!--
