--- a/transitions1/index.html
+++ b/transitions1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transitions</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button id="move">Move</button>
