--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="css/mobile.css" media="screen and (hover:none)">
 	</head>
 	<body>
-		<a href="#mobile-menu" id="mobile-menu"></a>
-		<i class="fas fa-bars"></i>
+		<a href="#mobile-menu" id="mobile-menu">
+		<i class="fas fa-bars"></i></a>
 		<nav>
 			<a href="#home">Home</a>
 			<a href="#courses">Courses</a>
@@ -19,12 +19,26 @@
 			<a href="#tos">Terms</a>
 			
 			<div>
-				<a href="emailhello@interfaceschool.com" title="email"><i class="fas fa-envelope"></i></a>
+				<a href="mailto:@interfaceschool.com" title="email"><i class="fas fa-envelope"></i></a>
 				<a href="https://www.facebook.com/interfaceSchool" title="facebook"><i class="fab fa-facebook-square"></i></a>
 				<a href="https://www.twitter.com/interfaceSchool" title="twitter"><i class="fab fa-twitter"></i></a>
 				<a href="https://www.youtube.com/channel/UCmX62z-UFn5iG-ZtQdPsBXg" title="youtube"><i class="fab fa-youtube"></i></a>
 			</div>
 		</nav>
+		<header>
+			<div class="slideshow-images">
+				<img src="images/slide1.jpg" alt="">
+				<img src="images/slide2.jpg" alt="">
+				<img src="images/slide3.jpg" alt="">
+				<img src="images/slide4.jpg" alt="">
+				<img src="images/slide5.jpg" alt="">
+				<img src="images/slide6.jpg" alt="">
+			</div>
+			<div class="content">
+				<h1>Interface Web School</h1>
+				<h2>Online Courses</h2>
+			</div>
+		</header>
 
 	</body>
 </html>
