--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Interface Online Classes</title>
-		<link rel="icon" type="img/png" href="images/interface-school.png">
-		<link rel="stylesheet" type="img/png" href="https://font.google/css?family=Quicksand|Sarabun">
+		<link rel="icon" type="images/png" href="images/interface-school.png">
+		<link rel="stylesheet" href="https://font.google/css?family=Quicksand|Sarabun">
 		<link rel="stylesheet" href="css/fontawesome-all.css">
 		<link rel="stylesheet"  href="css/standard.css">
 		<link rel="stylesheet" href="css/mobile.css" media="screen and (hover:none)">
