--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Interface Online Classes</title>
 		<link rel="icon" type="images/png" href="images/interface-school.png">
-		<link rel="stylesheet" href="https://font.google/css?family=Quicksand|Sarabun">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand|Sarabun">
 		<link rel="stylesheet" href="css/fontawesome-all.css">
 		<link rel="stylesheet"  href="css/standard.css">
 		<link rel="stylesheet" href="css/mobile.css" media="screen and (hover:none)">
@@ -39,6 +39,21 @@
 				<h2>Online Courses</h2>
 			</div>
 		</header>
-
+		<article id="intro">
+			<div class="side1">
+				<h3><img src="images/laptop.png" alt="" class="icon"></h3>
+				<h3>Learn by Doing</h3>
+				Interface online courses are different than most others- at Interface
+				you learn by doing. You'll still get all the details about the web technologies
+				of HTML 5 & CSS, but you'll learn them as you build a real web site.
+			</div>
+			<div class="side2">
+				<h3><img src="images/chat.png" alt="" class="icon"></h3>
+				<h3>We got you</h3>
+				Students of Interface courses also recive support over Skype to
+				answer any questions you may have if you get stuck. Email support is also
+				available anytime - or to the camera shy.
+			</div>
+		</article>
 	</body>
 </html>
