--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -19,7 +19,7 @@
 			<a href="#tos">Terms</a>
 			
 			<div>
-				<a href="mailto:@interfaceschool.com" title="email"><i class="fas fa-envelope"></i></a>
+				<a href="mailto:hello@interfaceschool.com" title="email"><i class="fas fa-envelope"></i></a>
 				<a href="https://www.facebook.com/interfaceSchool" title="facebook"><i class="fab fa-facebook-square"></i></a>
 				<a href="https://www.twitter.com/interfaceSchool" title="twitter"><i class="fab fa-twitter"></i></a>
 				<a href="https://www.youtube.com/channel/UCmX62z-UFn5iG-ZtQdPsBXg" title="youtube"><i class="fab fa-youtube"></i></a>
